[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/UI/InventoryListItem.png" type="Texture" id=1]
[ext_resource path="res://fonts/zrnic rg_0.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/UI/InventoryListItem_unselected.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/InventoryListItem.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 6
font_data = ExtResource( 2 )

[node name="InventoryListItem" type="Node2D"]
script = ExtResource( 4 )

[node name="Container" type="Node2D" parent="."]
scale = Vector2( 0.562376, 0.562376 )

[node name="TextureButton" type="TextureButton" parent="Container"]
margin_right = 584.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Container"]
margin_left = 18.379
margin_top = 1.99998
margin_right = 139.379
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 0.631373 )
text = "Item Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container"]
margin_left = 16.379
margin_top = -1.52588e-05
margin_right = 137.379
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Item Name"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Container/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Container/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
